duck/imports/ui/stylesheets/TorrentsDuck.less
.Site {
	display: flex;
	min-height: 100vh;
	flex-direction: column;
}
.mainContainer {
	flex: 1;
	padding-top: 5rem;
	padding-bottom: 3rem;
}
.center-this {
	text-align: center;
}
.hidden {
	display: none;
}
.torrentProgress {
	margin-bottom: 0 !important;
}
.middleCheckbox {
	margin-top: 7px;
}
//medium+ screen sizes
@media (min-width: 992px) {
	.desktop-only {
		display: block !important;
	}
}
//small screen sizes
@media (max-width: 991px) {
	.mobile-only {
		display: block !important;
	}
	  .desktop-only {
		display: none !important;
	}
}
// Dark mode
.ui.card.inverted,
.ui.styled.accordion.inverted,
.Site.inverted {
	background-color: #1b1c1d !important;
}
.inverted input,
.inverted .dropdown {
	background-color: #1b1c1d !important;
	color: rgba(255, 255, 255, 0.87) !important;
}

